AR-178: Introducing optional token parameter to each scriptable step or build step which overrides configured credentials