@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.32</version>
+        <version>4.62</version>
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
@@ -29,17 +29,17 @@
         </license>
     </licenses>
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <!-- Dependency versions -->
-        <jenkins.version>2.289.1</jenkins.version>
-        <jenkins-test-harness.version>2.34</jenkins-test-harness.version>
-        <groovy.version>2.4.17</groovy.version>
-        <junit.version>4.12</junit.version>
-        <jenkins-pipeline-unit.version>1.1</jenkins-pipeline-unit.version>
-        <groovy-eclipse-compiler.version>3.5.0-01</groovy-eclipse-compiler.version>
-        <java.level>8</java.level>
-        <revision>1.1.0</revision>
+        <jenkins.version>2.375.4</jenkins.version>
+<!--        <jenkins-test-harness.version>1954.v2e3fd5465b_a_6</jenkins-test-harness.version>-->
+        <groovy.version>2.4.21</groovy.version>
+<!--        <junit.version>4.12</junit.version>-->
+        <jenkins-pipeline-unit.version>1.17</jenkins-pipeline-unit.version>
+<!--        <groovy-eclipse-compiler.version>3.5.0-01</groovy-eclipse-compiler.version>-->
+<!--        <java.level>11</java.level>-->
+        <revision>1.2.0</revision>
         <changelist>999999-SNAPSHOT</changelist>
         <connectorHost />
         <jenkins.host.address />
@@ -56,15 +56,15 @@
 <!--            <artifactId>maven-hpi-plugin</artifactId>-->
 <!--            <version>3.5</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>credentials</artifactId>
-            <version>2.3.19</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
+<!--            <artifactId>credentials</artifactId>-->
+<!--            <version>1236.v31e44e6060c0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>plain-credentials</artifactId>
-            <version>1.7</version>
+            <version>143.v1b_df8b_d3b_e48</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -74,27 +74,27 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.13.1</version>
+            <version>2.15.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.1</version>
+            <version>2.15.0</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
-            <version>1.22</version>
+            <version>324.va_f5d6774f3a_d</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-step-api</artifactId>
-            <version>2.23</version>
+            <version>639.v6eca_cd8c04a_a_</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>apache-httpcomponents-client-4-api</artifactId>
-            <version>4.5.10-2.0</version>
+            <version>4.5.14-150.v7a_b_9d17134a_5</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -104,37 +104,37 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
-            <version>2.87</version>
+            <version>3659.v582dc37621d8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
-            <version>2.40</version>
+            <version>1284.v2fe8ed4573d4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-basic-steps</artifactId>
-            <version>2.23</version>
+            <version>1017.vb_45b_302f0cea_</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>2.37</version>
+            <version>1246.v5524618ea_097</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-api</artifactId>
-            <version>2.40</version>
+            <version>1208.v0cc7c6e0da_9e</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-support</artifactId>
-            <version>3.7</version>
+            <version>839.v35e2736cfd5c</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
@@ -161,13 +161,13 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.12.6</version>
+            <version>1.14.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.12.6</version>
+            <version>1.14.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -195,22 +195,22 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.32</version>
+            <version>2.0.7</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.32</version>
+            <version>2.0.7</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.32</version>
+            <version>2.0.7</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.32</version>
+            <version>2.0.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -221,7 +221,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <version>4.5.14</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -234,13 +234,13 @@
             <dependency>
                 <groupId>org.jenkins-ci.plugins</groupId>
                 <artifactId>script-security</artifactId>
-                <version>1.75</version>
+                <version>1244.ve463715a_f89c</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jenkins-ci.plugins</groupId>
                 <artifactId>scm-api</artifactId>
-                <version>2.6.4</version>
+                <version>667.v8b_6e07cdc7f2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -260,6 +260,9 @@
                         <jenkins.host.address>${jenkins.host.address}</jenkins.host.address>
                         <slaveAgentPort>${slaveAgentPort}</slaveAgentPort>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -272,6 +275,7 @@
                         <hudson.slaves.NodeProvisioner.MARGIN0>0.85</hudson.slaves.NodeProvisioner.MARGIN0>
                         <jenkins.host.address>${jenkins.host.address}</jenkins.host.address>
                     </systemProperties>
+                    <minimumJavaVersion>11</minimumJavaVersion>
                 </configuration>
             </plugin>
             <plugin>
